@@ -35,7 +35,7 @@ SEXP dpoMatrix_chol(SEXP x)
     SET_SLOT(val, Matrix_diagSym, mkString("N"));
     SET_SLOT(val, Matrix_DimSym, duplicate(dimP));
     vx = REAL(ALLOC_SLOT(val, Matrix_xSym, REALSXP, n2));
-    AZERO(vx, n2);
+    AZERO(vx, n2, 0.0);
     F77_CALL(dlacpy)(uplo, &n, &n, REAL(GET_SLOT(x, Matrix_xSym)),
 		     &n, vx, &n FCONE);
     if (n > 0) {
